k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ums-redis
  labels:
    app: ums-redis
    app.kubernetes.io/part-of: ums
spec:
  selector:
    app: ums-redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
